[tool.poetry]
name = "trade-network-of-electronics"
version = "0.1.0"
description = ""
authors = ["ilmtvv <napalkah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
djoser = "^2.2.2"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
